--- a/docroot/themes/custom/tower_health/components/_meta/_01-foot.twig
+++ b/docroot/themes/custom/tower_health/components/_meta/_01-foot.twig
@@ -1,7 +1,8 @@
 
   <!--DO NOT REMOVE-->
   {{ patternLabFoot | raw }}
-
+  <script src="../../../../../core/assets/vendor/jquery/jquery.min.js"></script>
+  <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
   <!-- This makes attach_library work wherever it is in the document flow. -->
   <script src="../../js/reload-scripts.js"></script>
 
