--- a/docroot/themes/custom/tower_health/components/_patterns/02-molecules/menus/main-menu/_03-main-menu-toggle.scss
+++ b/docroot/themes/custom/tower_health/components/_patterns/02-molecules/menus/main-menu/_03-main-menu-toggle.scss
@@ -47,7 +47,7 @@
   display: inline-block;
   text-align: center;
 
-  .toggle-expand--open & {
+  .toggle-expand.is-active & {
     display: none;
   }
 }
@@ -56,7 +56,7 @@
   display: none;
   text-align: center;
 
-  .toggle-expand--open & {
+  .toggle-expand.is-active & {
     display: inline-block;
   }
 }
