add in a close trigger to drawers

--- a/docroot/themes/custom/tower_health/components/_patterns/02-molecules/menus/_menu.twig
+++ b/docroot/themes/custom/tower_health/components/_patterns/02-molecules/menus/_menu.twig
@@ -53,6 +53,9 @@
             li_blockname: item_blockname,
           } %}
         {% endfor %}
+        {% if menu_level == 1 %}
+          <button class="close-nav close-nav--child">Close Child Navigation Drawer</button>
+        {% endif %}
       {% endblock %}
     {% endembed %}
   {% endif %}
