add a close menu for mobile

--- a/docroot/themes/custom/tower_health/components/_patterns/02-molecules/menus/main-menu/main-menu.twig
+++ b/docroot/themes/custom/tower_health/components/_patterns/02-molecules/menus/main-menu/main-menu.twig
@@ -31,4 +31,6 @@
       items: menu_items,
     } %}
   </div>
+  
+  <button class="close-nav close-nav--mobile">Close Navigation Drawer</button>
 </nav>
