modify menu toggle styles

--- a/docroot/themes/custom/tower_health/components/_patterns/02-molecules/menus/main-menu/_03-main-menu-toggle.scss
+++ b/docroot/themes/custom/tower_health/components/_patterns/02-molecules/menus/main-menu/_03-main-menu-toggle.scss
@@ -2,7 +2,7 @@
 .toggle-expand {
   display: inline-block;
   text-decoration: none;
-  padding: 1em;
+  padding: .75em 0 .75em .75em;
   background-color: transparent;
   border: none;
 
@@ -19,7 +19,11 @@
       fill: $growth-lg;
     }
   }
-
+  
+  @include breakpoint($bp1) {
+    padding: 1em 0 1em 1em;
+  }
+  
   @include breakpoint($bp3) {
     display: none;
   }
@@ -31,23 +35,44 @@
 
 // SVG icon
 .toggle-expand__icon {
-  height: 2rem;
-  width: 2rem;
+  height: 1.7rem;
+  width: 1.7rem;
   margin: 0 auto;
+  
+  @include breakpoint($bp1) {
+    height: 2rem;
+    width: 2rem;
+  }
 }
 
 .toggle-close__icon {
-  height: 2rem;
-  width: 2rem;
+  height: 1.7rem;
+  width: 1.7rem;
   padding: .25rem;
   margin: 0 auto;
+  
+  .search-toggle & {
+    padding: .15rem;
+  }
+  
+  @include breakpoint($bp1) {
+    height: 2rem;
+    width: 2rem;
+    padding: .25rem;
+    
+    .search-toggle & {
+      padding: .15rem;
+    }
+  }
 }
 
+.search-toggle__icon,
 .toggle-expand__open {
   display: inline-block;
   text-align: center;
 
-  .toggle-expand.is-active & {
+  .toggle-expand.is-active &,
+  .header__search.is-active & {
     display: none;
   }
 }
@@ -56,7 +81,8 @@
   display: none;
   text-align: center;
 
-  .toggle-expand.is-active & {
+  .toggle-expand.is-active &,
+  .header__search.is-active & {
     display: inline-block;
   }
 }
