modify menu styles

--- a/docroot/themes/custom/tower_health/components/_patterns/02-molecules/menus/main-menu/_00-main-menu.scss
+++ b/docroot/themes/custom/tower_health/components/_patterns/02-molecules/menus/main-menu/_00-main-menu.scss
@@ -4,16 +4,18 @@
   
   &.is-active {
     background-color: $white;
-    display: block;
-    height: 85%;
+    display: flex;
+    flex-direction: column;
+    height: 100vh;
     left: 0;
+    top: 100%;
     overflow-y: scroll;
     position: absolute;
-    top: 134px;
     right: 0;
     width: 100%;
 
     @include breakpoint($bp3) {
+      display: block;
       height: auto;
       position: static;
     }
@@ -22,7 +24,7 @@
   @include breakpoint($bp3) {
     display: block;
     z-index: 1;
-    position: relative;
+    position: static;
   }
 }
 
@@ -59,7 +61,13 @@
     }
   }
   
+  @include breakpoint($bp4) {
+    margin-top: 0;
+    top: 3em;
+  }
+  
   @include breakpoint($bp5) {
+    
     &:after {
       right: calc( ((100vw - 1600px) / -2 ) - 38px);
     }
@@ -75,6 +83,7 @@
   border-bottom: none;
   height: 0;
   overflow: hidden;
+  visibility: hidden;
   background-color: rgba($trust-ltst, .35);
   width: 100%;
 
@@ -89,11 +98,10 @@
     right: 0;
     top: 100%;
     overflow: visible;
-    padding: 1em 0;
+    padding: 1em;
     margin-top: 0;
     z-index: 1;
-    background-color: $white;
-    box-shadow: 0px 2px 6px rgba($black, .25);
+    background-color: rgba($trust-ltst, .25);
     column-count: 2;
   }
 
@@ -114,8 +122,9 @@
   }
 
   // See main-menu.js
-  &-open {
+  .main-menu__item--with-sub.is-active & {
     height: auto;
+    visibility: visible;
     
     @include breakpoint($bp3) {
       visibility: visible;
