Add jquery from drupal and drupal.js.

--- a/docroot/themes/custom/tower_health/components/_meta/_01-foot.twig
+++ b/docroot/themes/custom/tower_health/components/_meta/_01-foot.twig
@@ -1,8 +1,8 @@
 
   <!--DO NOT REMOVE-->
   {{ patternLabFoot | raw }}
-  <script src="../../../../../docroot/core/assets/vendor/jquery/jquery.min.js"></script>
-  <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
+  <script src="../../js/jquery.min.js"></script>
+  <script src="../../js/drupal.js"></script>
   <!-- This makes attach_library work wherever it is in the document flow. -->
   <script src="../../js/reload-scripts.js"></script>
 
