move footer and header data into data folder

--- a/docroot/themes/custom/tower_health/components/_patterns/02-molecules/menus/main-menu/main-menu.twig
+++ b/docroot/themes/custom/tower_health/components/_patterns/02-molecules/menus/main-menu/main-menu.twig
@@ -21,14 +21,14 @@
   <div class="utility" id="utility">
     {% include "@molecules/menus/_menu.twig" with {
       menu_class: "utility-menu",
-      items: utility_items,
+      items: utility_items
     } %}
   </div>
   
   <div id="main-nav" class="main-nav">
     {% include "@molecules/menus/_menu.twig" with {
       menu_class: "main-menu",
-      items: menu_items,
+      items: header_menu_items
     } %}
   </div>
   
