--- a/docroot/themes/custom/tower_health/components/_patterns/03-organisms/site/site-footer/site-footer.twig
+++ b/docroot/themes/custom/tower_health/components/_patterns/03-organisms/site/site-footer/site-footer.twig
@@ -1,7 +1,9 @@
 <footer class="footer">
   <div class="footer-top">
     <div class="footer__links">
-      {% include "@molecules/menus/footer-menu/footer-menu.twig" %}
+      {% include "@molecules/menus/footer-menu/footer-menu.twig" with {
+        items: footer_items
+      } %}
     </div>
     <div class="footer__info">
       {% include "@atoms/04-images/00-image/figure.twig" with {
@@ -11,7 +13,7 @@
       } %}
       <div>
         <div class="footer__info__social">
-          {% for icon in social %}
+          {% for icon in footer_social %}
             {% include "@atoms/social-icon/social-icon.twig" with {
               title: icon.title,
               url: icon.url,
@@ -20,8 +22,8 @@
           {% endfor %}
         </div>
         <div class="footer__info__contact">
-          {{ contact.address }}
-          <a href="tel:{{contact.phone}}">{{ contact.phone }}</a>
+          {{ footer_contact.address }}
+          <a href="tel:{{footer_contact.phone}}">{{ footer_contact.phone }}</a>
         </div>
       </div>
     </div>
@@ -29,12 +31,12 @@
   <div class="footer-bottom-background">
     <div class="footer-bottom">
       <div class="footer__details">
-        {% for detail in details %}
+        {% for detail in footer_details %}
           <a href="{{ detail.href }}">{{ detail.title }}</a>
         {% endfor %}
       </div>
       <div class="footer__legal">
-        {{ legal }}
+        {{ footer_legal }}
       </div>
     </div>
   </div>
