--- a/docroot/themes/custom/tower_health/components/_patterns/03-organisms/site/site-header/site-header.twig
+++ b/docroot/themes/custom/tower_health/components/_patterns/03-organisms/site/site-header/site-header.twig
@@ -5,7 +5,7 @@
       {% include "@atoms/04-images/00-image/figure.twig" with {
         img_src: "../../images/TowerHealth_H.svg",
         img_alt: "Tower Health",
-        img_url: logo_link_url|default('/'),
+        img_url: header_logo_link_url|default('/'),
         image_figure_base_class: 'header-logo'
       } %}
       
